--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ tokio = { version = "1.0", features = ["full"] }
 ethers = { version = "2.0", features = ["rustls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "bigdecimal"] }
+sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "bigdecimal"] }
 axum = { version = "0.7", features = ["ws"] }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["cors"] }
@@ -19,7 +19,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 config = "0.14"
 dotenv = "0.15"
-bigdecimal = { version = "0.4", features = ["serde"] }
+bigdecimal = { version = "0.5", features = ["serde"] }
 hex = "0.4"
 
 [dev-dependencies]
