优化事件的处理逻辑和错误部分

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "uniswap-monitor"
 version = "0.1.0"
 edition = "2021"
 
+[lints.clippy]
+unused_variables = "allow"
+dead_code = "allow"
+
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
 ethers = { version = "2.0", features = ["rustls"] }
