--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ dotenv = "0.15"
 
 hex = "0.4"
 futures-util = "0.3.31"
-reqwest = {version:"0.12.22",features = ["json", "gzip", "brotli", "deflate", "rustls-tls"]}
+reqwest = {version="0.12.22",features = ["json", "gzip", "brotli", "deflate", "rustls-tls"]}
 
 [dev-dependencies]
 tokio-test = "0.4"
