--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ hex = "0.4"
 futures-util = "0.3.31"
 reqwest = {version="0.12.22",features = ["json", "gzip", "brotli", "deflate", "rustls-tls"]}
 openssl = { version = "0.10", features = ["vendored"] }
+num-traits = "0.2.19"
 
 [dev-dependencies]
 tokio-test = "0.4"
